@@ -1,3 +1,9 @@
+2018-06-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCcse.c: fix bugs #2709 and #1951
+	* support/regression/tests/gcc-torture-execute-20001027-1.c,
+	* support/regression/tests/bug-2708.c: enable tests
+
 2018-06-13 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* support/regression/tests/bug-2756.c:
